--- a/src/pages/enquetes/enquetes.html
+++ b/src/pages/enquetes/enquetes.html
@@ -7,5 +7,19 @@
   </ion-navbar>
 </ion-header>  
 <ion-content>  
+    <ion-card *ngFor="let m of enquetes">
+        <img src="assets/imgs/rede_sociais/facebook.jpg" class="img-responsive " style=" width: 100% !important;height: auto !important;min-height: 150px;max-height: 170px;"/>
+        <ion-card-content>
+          <ion-card-title>{{m.descricao}}</ion-card-title>
+          <ion-item>
+            <ion-label>Finaliza: </ion-label>
+            <ion-datetime type="text" [(ngModel)]="m.data_fim" displayFormat="DD/MM/YYYY - HH:mm" ng-disabled="true"></ion-datetime> 
+          </ion-item>     
+          <button ion-button block color="light">{{m.opcao_1}}</button>                         
+          <button ion-button block color="light">{{m.opcao_2}}</button> 
+          <button ion-button block color="light">{{m.opcao_3}}</button>   
+          <button ion-button block color="light">{{m.opcao_4}}</button> 
+          <button ion-button block>Votar</button>
+        </ion-card-content>
+      </ion-card> 
 </ion-content>
-  
