--- a/src/pages/mensagens/mensagens.html
+++ b/src/pages/mensagens/mensagens.html
@@ -7,5 +7,17 @@
   </ion-navbar>
 </ion-header>  
 <ion-content>  
+  <ion-card *ngFor="let m of msgs">
+    <img src="assets/imgs/rede_sociais/facebook.jpg" class="img-responsive " style=" width: 100% !important;height: auto !important;min-height: 150px;max-height: 170px;"/>
+    <ion-card-content>
+      <ion-card-title>Titulo</ion-card-title>
+      <p>{{m.descricao}}</p>  
+      <ion-item>
+          <ion-label>Data: </ion-label>
+          <ion-datetime type="text" [(ngModel)]="m.data_evento" displayFormat="DD/MM/YYYY - HH:mm" ng-disabled="true"></ion-datetime> 
+      </ion-item> 
+      <ion-icon ios="ios-bonfire" md="md-bonfire" *ngIf="m.on_fire"></ion-icon>     
+    </ion-card-content>
+  </ion-card> 
 </ion-content>
   
