--- a/src/pages/enquetes/enquetes.html
+++ b/src/pages/enquetes/enquetes.html
@@ -16,24 +16,24 @@
             <ion-datetime type="text" [(ngModel)]="m.data_fim" displayFormat="DD/MM/YYYY - HH:mm" [disabled]="true"></ion-datetime> 
           </ion-item>
           <ion-list radio-group [(ngModel)]="m.resposta"> 
-            <ion-item style="padding-left: 0px">
+            <ion-item style="padding-left: 0px" *ngIf="m.opcao_1!=null" >
               <ion-label>{{m.opcao_1}}</ion-label>
-              <ion-radio value="1"></ion-radio>
+              <ion-radio value="1" [disabled]="m.respondido"></ion-radio>
             </ion-item>          
-            <ion-item style="padding-left: 0px">
+            <ion-item style="padding-left: 0px" *ngIf="m.opcao_2!=null">
               <ion-label>{{m.opcao_2}}</ion-label>
-              <ion-radio value="2"></ion-radio>
+              <ion-radio value="2" [disabled]="m.respondido"></ion-radio>
             </ion-item>          
-            <ion-item style="padding-left: 0px">
+            <ion-item style="padding-left: 0px" *ngIf="m.opcao_3!=null">
               <ion-label>{{m.opcao_3}}</ion-label>
-              <ion-radio value="3"></ion-radio>
+              <ion-radio value="3" [disabled]="m.respondido"></ion-radio>
             </ion-item>
-            <ion-item style="padding-left: 0px">
+            <ion-item style="padding-left: 0px" *ngIf="m.opcao_4!=null">
               <ion-label>{{m.opcao_4}}</ion-label>
-              <ion-radio value="4"></ion-radio>
+              <ion-radio value="4" [disabled]="m.respondido"></ion-radio>
             </ion-item>  
           </ion-list>
-          <button ion-button block (click)="votar(m)">Votar</button>
+          <button ion-button block (click)="votar(m)" [disabled]="m.respondido">Votar</button>
         </ion-card-content>
       </ion-card> 
 </ion-content>
