--- a/src/pages/enquete/enquete.html
+++ b/src/pages/enquete/enquete.html
@@ -10,17 +10,17 @@
   <form (ngSubmit)="criarEnquete()">
     <ion-item>
       <ion-label stacked>Título da enquete</ion-label>
-      <ion-input [(ngModel)]="enquete.descricao" name="descricao" ></ion-input>
+      <ion-input [(ngModel)]="enquete.descricao" formControlName="descricao" required ></ion-input>
     </ion-item>
 
     <ion-item rows="1">
       <ion-label>Data e hora limite</ion-label>
-      <ion-datetime type="text" [(ngModel)]="enquete.data_fim" name="title" displayFormat="DD/MM/YYYY - HH:mm"></ion-datetime>
+      <ion-datetime type="text" [(ngModel)]="enquete.data_fim" formControlName="title" displayFormat="DD/MM/YYYY - HH:mm" required></ion-datetime>
     </ion-item>
     
     <ion-item>
       <ion-label stacked>Opção 1</ion-label>
-      <ion-input [(ngModel)]="enquete.opcao_1" name="opcao_1"></ion-input>
+      <ion-input [(ngModel)]="enquete.opcao_1" formControlName="opcao_1"></ion-input>
     </ion-item>
       
     <ion-item>
