Alteração tela criar enquete

--- a/src/pages/enquete/enquete.html
+++ b/src/pages/enquete/enquete.html
@@ -38,7 +38,7 @@
       <ion-input formControlName="opcao_4"></ion-input>
     </ion-item>
 
-    <button ion-button type="submit" [disabled]="!enquete.valid || verificarOpcoes()" block>Enviar</button>
+    <button ion-button type="submit" block>Enviar</button>
 
   </form>
 </ion-content>
