--- a/src/pages/mensagem/nova/nova.html
+++ b/src/pages/mensagem/nova/nova.html
@@ -19,8 +19,12 @@
         <ion-item class="textarea">
           <ion-label>Mensagem</ion-label>
           <ion-textarea class="textarea" name="descricao" [(ngModel)]="mensagem.descricao" ></ion-textarea>
-        </ion-item>
-        <button ion-button type="submit" block>Enviar</button>
-        <button ion-button (click)="cancelar()" block>Cancelar</button>
-    </form>
+        </ion-item>        
+    </form>    
 </ion-content>
+<ion-footer>
+  <ion-toolbar>
+    <button ion-button (click)="enviarMensagem()" block>Enviar</button>
+    <button ion-button (click)="cancelar()" block>Cancelar</button>
+  </ion-toolbar>
+</ion-footer>
