--- a/src/pages/enquete/enquete.html
+++ b/src/pages/enquete/enquete.html
@@ -9,7 +9,7 @@
 <ion-content> 
   <form [formGroup]="enquete">
     <ion-item>
-      <ion-label stacked>Título da enquete</ion-label>
+      <ion-label stacked>Descrição da enquete</ion-label>
       <ion-input formControlName="descricao"  required ></ion-input>
     </ion-item>
 
