--- a/src/pages/menu/menu.html
+++ b/src/pages/menu/menu.html
@@ -19,4 +19,6 @@
 </ion-content>
 </ion-menu>
 
-<ion-nav [root]="rootPage" #content swipeBackEnabled="false"></ion-nav>
+<ion-nav [root]="rootPage" #content swipeBackEnabled="false">
+  
+</ion-nav>
