integracao com twith e ajustes de cor e correcao de nova enquete e nova mensage,

--- a/src/pages/enquetes/enquetes.html
+++ b/src/pages/enquetes/enquetes.html
@@ -5,10 +5,10 @@
     </button>
     <ion-title>Enquetes</ion-title>
     <ion-buttons end>
-        <button ion-button icon-only>
-          <ion-icon float-left *ngIf="true" ios="ios-checkmark-circle" md="md-checkmark-circle" color="secondary" style="zoom:1.5;"></ion-icon>
-          <ion-icon float-left *ngIf="false" ios="ios-close-circle" md="md-close-circle" color="dark" style="zoom:1.5;"></ion-icon>
-        </button>
+      <button ion-button icon-only>        
+        <ion-icon float-left *ngIf="is_online" ios="ios-checkmark-circle" md="md-checkmark-circle" color="secondary" style="zoom:1.5;"></ion-icon>
+        <ion-icon float-left *ngIf="!is_online" ios="ios-close-circle" md="md-close-circle" color="danger" style="zoom:1.5;"></ion-icon>
+      </button>
       </ion-buttons>
   </ion-navbar>
 </ion-header>  
@@ -39,7 +39,7 @@
               <ion-radio value="4" [disabled]="m.respondido"></ion-radio>
             </ion-item>  
           </ion-list>
-          <button ion-button block (click)="votar(m)" [disabled]="m.respondido">Votar</button>
+          <button ion-button block color="dark" (click)="votar(m)" [disabled]="m.respondido">Votar</button>
         </ion-card-content>
       </ion-card> 
 </ion-content>
