ajuste data telas de enquetes e mensagens

--- a/src/pages/mensagens/mensagens.html
+++ b/src/pages/mensagens/mensagens.html
@@ -21,7 +21,7 @@
       <ion-card-title text-center  >{{m.descricao}}</ion-card-title>
       <ion-item style="padding-left: 0px" >
           <ion-label color="dark">Data do Evento: </ion-label>
-          <ion-datetime  type="text" [(ngModel)]="m.data_evento" displayFormat="DD/MM/YYYY - HH:mm" [disabled]="true"></ion-datetime> 
+          <ion-datetime  type="text" [(ngModel)]="m.data_evento" displayFormat="DD/MMM/YYYY - HH:mm" [disabled]="true"></ion-datetime> 
       </ion-item> 
       </ion-card-content>
   </ion-card> 
