--- a/src/pages/enquetes/enquetes.html
+++ b/src/pages/enquetes/enquetes.html
@@ -19,22 +19,22 @@
           <ion-card-title>{{m.descricao}}</ion-card-title>
           <ion-item style="padding-left: 0px">
             <ion-label>Enquete Finaliza: </ion-label>
-            <ion-datetime type="text" [(ngModel)]="m.data_fim" displayFormat="DD/MM/YYYY - HH:mm" [disabled]="true"></ion-datetime> 
+            <ion-datetime type="text" [(ngModel)]="m.data_fim" displayFormat="DD/MMM/YYYY - HH:mm" [disabled]="true"></ion-datetime> 
           </ion-item>
           <ion-list radio-group [(ngModel)]="m.resposta"> 
-            <ion-item style="padding-left: 0px" *ngIf="m.opcao_1!=null && m.opcao_1!='' && m.opcao_1!=undefined && m.opcao_1!='null'" >
+            <ion-item style="padding-left: 0px" *ngIf="m.opcao_1!=null && m.opcao_1!='' && m.opcao_1!='undefined' && m.opcao_1!='null'" >
               <ion-label>{{m.opcao_1}}</ion-label>
               <ion-radio value="1" [disabled]="m.respondido"></ion-radio>
             </ion-item>          
-            <ion-item style="padding-left: 0px" *ngIf="m.opcao_2!=null && m.opcao_2!='' && m.opcao_2!=undefined && m.opcao_2!='null'">
+            <ion-item style="padding-left: 0px" *ngIf="m.opcao_2!=null && m.opcao_2!='' && m.opcao_2!='undefined' && m.opcao_2!='null'">
               <ion-label>{{m.opcao_2}}</ion-label>
               <ion-radio value="2" [disabled]="m.respondido"></ion-radio>
             </ion-item>          
-            <ion-item style="padding-left: 0px" *ngIf="m.opcao_3!=null && m.opcao_3!='' && m.opcao_3!=undefined && m.opcao_3!='null'">
+            <ion-item style="padding-left: 0px" *ngIf="m.opcao_3!=null && m.opcao_3!='' && m.opcao_3!='undefined' && m.opcao_3!='null'">
               <ion-label>{{m.opcao_3}}</ion-label>
               <ion-radio value="3" [disabled]="m.respondido"></ion-radio>
             </ion-item>
-            <ion-item style="padding-left: 0px" *ngIf="m.opcao_4!=null && m.opcao_4!='' && m.opcao_4!=undefined && m.opcao_4!='null'">
+            <ion-item style="padding-left: 0px" *ngIf="m.opcao_4!=null && m.opcao_4!='' && m.opcao_4!='undefined' && m.opcao_4!='null'">
               <ion-label>{{m.opcao_4}}</ion-label>
               <ion-radio value="4" [disabled]="m.respondido"></ion-radio>
             </ion-item>  
