--- a/src/pages/redes-sociais/redes-sociais.html
+++ b/src/pages/redes-sociais/redes-sociais.html
@@ -13,6 +13,9 @@
   </ion-navbar>
 </ion-header>
 <ion-content> 
+  
+    <button ion-button color="dark" style="height: 50px" (click)="uivar()" block>Uivo</button>
+
     <ion-card (click)="openWebpage('http://www.facebook.com/gratis150ml')">
       <img src="assets/imgs/rede_sociais/facebook.jpg" class="img-responsive " style=" width: 100% !important;height: auto !important;min-height: 150px;max-height: 150px;"/>
       <ion-card-content>
