--- a/src/pages/enquete/enquete.html
+++ b/src/pages/enquete/enquete.html
@@ -5,11 +5,13 @@
     </button>
     <ion-title>Nova Enquete</ion-title>
     <ion-buttons end>
-        <button ion-button icon-only>        
-          <ion-icon float-left *ngIf="is_online" ios="ios-checkmark-circle" md="md-checkmark-circle" color="secondary" style="zoom:1.5;"></ion-icon>
-          <ion-icon float-left *ngIf="!is_online" ios="ios-close-circle" md="md-close-circle" color="danger" style="zoom:1.5;"></ion-icon>
-        </button>
-      </ion-buttons>
+      <button ion-button icon-only *ngIf="is_online" (click)="openWebpage('http://www.twitch.tv/gratis150ml')">        
+        <ion-icon float-left ios="ios-checkmark-circle" md="md-checkmark-circle" color="secondary" style="zoom:1.5;"></ion-icon>
+      </button>
+      <button ion-button icon-only *ngIf="!is_online">        
+        <ion-icon float-left  ios="ios-close-circle" md="md-close-circle" color="danger" style="zoom:1.5;"></ion-icon>
+      </button>
+    </ion-buttons>
   </ion-navbar>
 </ion-header>
 <ion-content> 
