--- a/src/pages/redes-sociais/redes-sociais.html
+++ b/src/pages/redes-sociais/redes-sociais.html
@@ -16,36 +16,36 @@
 </ion-header>
 <ion-content> 
   
-    <button ion-button color="dark" style="height: 50px" (click)="uivar()" block>Uivo</button>
+    <!--<button ion-button color="dark" style="height: 50px" (click)="uivar()" block>Uivo</button>-->
 
     <ion-card (click)="openWebpage('http://www.twitch.tv/gratis150ml')">
       <img src="assets/imgs/rede_sociais/twitch.png" class="img-responsive " style=" width: 100% !important;height: auto !important;min-height: 150px;max-height: 150px;"/>
       <ion-card-content>
-        <ion-card-title>Twitch</ion-card-title>      
+        <ion-card-title style="border-top: 1px solid lightslategray;">Twitch</ion-card-title>      
       </ion-card-content>
     </ion-card>  
     <ion-card (click)="openWebpage('https://www.youtube.com/channel/UCrx4qFAvkAsZNxHPNy3pVpA')">
       <img src="assets/imgs/rede_sociais/youtube.jpg" class="img-responsive " style=" width: 100% !important;height: auto !important;min-height: 150px;max-height: 150px;"/>
       <ion-card-content>
-        <ion-card-title>Youtube</ion-card-title>      
+        <ion-card-title style="border-top: 1px solid lightslategray;">Youtube</ion-card-title>      
       </ion-card-content>
     </ion-card>
     <ion-card (click)="openWebpage('http://www.instagram.com/gratis150ml')">
       <img src="assets/imgs/rede_sociais/instagram.jpg" class="img-responsive" style=" width: 100% !important;height: auto !important;min-height: 150px;max-height: 150px;"/>
       <ion-card-content>
-        <ion-card-title>Instagram</ion-card-title>      
+        <ion-card-title style="border-top: 1px solid lightslategray;">Instagram</ion-card-title>      
       </ion-card-content>
     </ion-card>
     <ion-card (click)="openWebpage('http://www.facebook.com/gratis150ml')">
       <img src="assets/imgs/rede_sociais/facebook.jpg" class="img-responsive " style=" width: 100% !important;height: auto !important;min-height: 150px;max-height: 150px;"/>
       <ion-card-content>
-        <ion-card-title>Facebook</ion-card-title>        
+        <ion-card-title style="border-top: 1px solid lightslategray;">Facebook</ion-card-title>        
       </ion-card-content>
     </ion-card>  
   <ion-card (click)="openWebpage('http://www.twitter.com/gratis150pdl')">
     <img src="assets/imgs/rede_sociais/twitter.jpg" class="img-responsive " style=" width: 100% !important;height: auto !important;min-height: 150px;max-height: 150px;"/>
     <ion-card-content>
-      <ion-card-title>Twitter</ion-card-title>      
+      <ion-card-title style="border-top: 1px solid lightslategray;">Twitter</ion-card-title>      
     </ion-card-content>
   </ion-card>
 </ion-content>
